k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backups-deployment
  labels:
    app: backups
spec:
  selector:
    matchLabels:
      app: backups
      role: web
  template:
    metadata:
      labels:
        app: backups
        role: web
    spec:
      containers:
      - image: registry.openculinary.org/reciperadar/backups
        imagePullPolicy: IfNotPresent
        name: backups
        ports:
        - containerPort: 80
        securityContext:
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /var/run
          name: var-run
        - mountPath: /var/cache/nginx
          name: var-cache-nginx
      volumes:
      - name: var-run
        emptyDir:
          medium: "Memory"
          sizeLimit: "4Mi"
      - name: var-cache-nginx
        emptyDir:
          medium: "Memory"
          sizeLimit: "128Mi"
